# Vecron

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app  default.profraw  go.mod  go.sum  install.sh  main.go  todo.txt  vecron
.cache/clangd/index/: bind.hpp.087AD1A3C796F7B3.idx  build.cpp.BC92C36C27C78869.idx  build.hpp.9680F7B53D873C08.idx  command.hpp.CBB5210D947BC62C.idx  common.cpp.FD6256A6285D8B54.idx  common.hpp.B3BF02FAA520D7D9.idx  controller.hpp.CF21F65A6EC9BD96.idx  cycle.hpp.58FFA1DFCF4A1855.idx  debug.cpp.ED86533101122C24.idx  debug.hpp.43D25173BA80794A.idx  dereferencers.hpp.DD822D7D86224210.idx  fzf_mode.hpp.2252F72BC8FC7365.idx  fzf_modes.hpp.3C733A406F1B46A8.idx  fzf_prompt.hpp.4E547C5FB5467AF5.idx  fzf_prompt_helpers.hpp.DBBC0379EB651FFF.idx  global_config.hpp.3180DBFE336B109E.idx  header.hpp.E033EE5170406A46.idx  height.hpp.C87AC3F4D3842869.idx  info.hpp.FDF5E161DAF1802C.idx  infoPosition.hpp.EB84AABC92C439E6.idx  list.cpp.BEEECAFC412B19CC.idx  list.hpp.6D27844C7B8F6E43.idx  local_config.hpp.17EDAD76B0927647.idx  main.cpp.14E09DC5CE9A264D.idx  main.cpp.82FCD38E09D24FAF.idx  main.cpp.A307051747B073FE.idx  module.hpp.7D87292574731F9A.idx  multiselect.hpp.3F8939E7A01A65B8.idx  new_command.cpp.1D112EA53704FAD8.idx  new_command.hpp.DA17A6E403D833C5.idx  pattern.hpp.A79B1F4D7C274733.idx  preprocess.cpp.2AFA2535D790A731.idx  preprocess.hpp.EB05AD06D3D6E052.idx  process.hpp.821B71D0F231DD04.idx  process.hpp.C9B55F9C155A0CDA.idx  prompt.hpp.E07D2881B1E0C0C5.idx  reverse.hpp.359B6AF8CC55E281.idx  shell.cpp.45C3CEBFE9CD9ADD.idx  shell.hpp.5477895FD7CF7C37.idx  split.hpp.8A7E9F3E50D7F591.idx  (+1 more)
.vecron/: main.json
build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt  vecron_common_tests
build_release/common/: cmake_install.cmake
cfg/: buildType.go  config.go  db.go  localConfig.go
cli/: args.go  clear.go  help.go  logo.go  prompt.go  pwd.go
cmake/: defaults.cmake
command/: Command.go  build.go  config.go  format.go  help.go  new.go  run.go
common/: CMakeLists.txt
common/command/: command.hpp
common/controller/: controller.cpp  controller.hpp
common/controller/config/: global_config.cpp  global_config.hpp  invalid_config_exception.hpp  local_config.cpp  local_config.hpp
common/fzf/: fzf_modes.cpp  fzf_modes.hpp  fzf_prompt.hpp  fzf_prompt_helpers.hpp
common/fzf/fzf_modes/: bind.cpp  bind.hpp  cycle.cpp  cycle.hpp  fzf_mode.hpp  header.cpp  header.hpp  height.cpp  height.hpp  info.hpp  infoPosition.cpp  infoPosition.hpp  multiselect.cpp  multiselect.hpp  pattern.cpp  pattern.hpp  prompt.cpp  prompt.hpp  reverse.cpp  reverse.hpp  style.cpp  style.hpp
common/module/: module.hpp
common/shell/: handler.hpp  handlersImpl.hpp  process.cpp  process.hpp  shell.cpp  shell.hpp
common/util/: args.cpp  args.hpp  dereferencers.hpp  home.cpp  home.hpp  process.cpp  process.hpp  split.cpp  split.hpp
example/module/: CMakeLists.txt  main.cpp
fs/: cp.go  home.go  ls.go  pwd.go
fs/interpreter/: interpreter.go
inputQueue/: inputqueue.go
module_examle/safe/: safe.go
module_examle/unsafe/: unsafe.cpp
modules/: Module.go
modules/safeModules/: loader.go
modules/unsafeModules/: loader.go
some/: CMakeLists.txt  README.md  init.sh
some/.vecron/: main.json
some/src/: main.cpp
src/: main.cpp
src/cli/: args.cpp  args.hpp  common.cpp  common.hpp  logo.cpp  logo.hpp
src/command/: build.cpp  build.hpp  command.hpp  debug.cpp  debug.hpp  new_command.cpp  new_command.hpp  preprocess.cpp  preprocess.hpp
src/config/: global_config.cpp  global_config.hpp
src/fs/: home.cpp  home.hpp  list.cpp  list.hpp
src/module/: module.hpp
templates/cpp/: CMakeLists.txt  README.md
templates/cpp/.vecron/: config.json
templates/go/: go.mod
templates/java/: settings.gradle
test/common/: main.cpp  shell.cpp
utils/: db.go  preprocessor.go
